# piml-in-metal-am

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ExampleHDF5Open.py  LICENSE.txt  README.md  config.py  pyproject.toml
.devcontainer/: .env.example  Dockerfile  README.md  devcontainer.json  docker-compose.yml
.dvc/: config
.github/: copilot-instructions.md
data/precomputed/: layer_summary.parquet.dvc
docs/: git-branch-management.md
experiments/: train.sh
notebooks/: 01_eda_and_data_preparation.ipynb  02_feature_engineering.ipynb  02_yolo_segmentation.ipynb  03_baseline_vit_segmentation.ipynb  04_vit_segmentation.ipynb  benchmark_etl.ipynb  data.yaml  data_preparation.ipynb
notebooks/runs/mlflow/0/: meta.yaml
notebooks/runs/mlflow/540015911996787463/: meta.yaml
notebooks/runs/segment/yolo_spatter_streak/: args.yaml
notebooks/runs/segment/yolo_spatter_streak2/: args.yaml
notebooks/runs/segment/yolo_spatter_streak3/: args.yaml
runs/segment/yolo_fast/: args.yaml
runs/segment/yolo_fast2/: args.yaml
src/: config.py  hdf5_viewer.py
src/datasets/: multi_build.py  peregrine.py
src/examples/: streaking_and_spatter.py
src/models/: segformer_baseline.py
src/training/: train.py  train_baseline.py  train_val_split.py
src/utils/: export_to_yolo_data.py  export_yolo_training_data.py  metrics.py  physics_features.py  yolo_segmentation.py
tests/: test_config.py  test_export_to_yolo_data.py  test_export_yolo_training_data.py  test_yolo_segmentation.py
(+9 files in other folders)
