[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piml-in-metal-am"
version = "0.1.0"
description = "Physics Informed Machine Learning for Metal Additive Manufacturing"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Brighton Nkomo", email = "vnbrighton@gmail.com" }
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "h5py>=3.10.0",
    "matplotlib>=3.8.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.37.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "opencv-python>=4.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "black>=24.1.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "huggingface_hub>=0.15.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]